; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-spear/extr_time.c_spear_timer_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-spear/extr_time.c_spear_timer_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 (%struct.clock_event_device*)* }

@clkevt = common dso_local global %struct.clock_event_device zeroinitializer, align 8
@INT_STATUS = common dso_local global i32 0, align 4
@gpt_base = common dso_local global i64 0, align 8
@CLKEVT = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @spear_timer_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spear_timer_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.clock_event_device*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  store %struct.clock_event_device* @clkevt, %struct.clock_event_device** %5, align 8
  %6 = load i32, i32* @INT_STATUS, align 4
  %7 = load i64, i64* @gpt_base, align 8
  %8 = load i32, i32* @CLKEVT, align 4
  %9 = call i64 @IR(i32 %8)
  %10 = add nsw i64 %7, %9
  %11 = call i32 @writew(i32 %6, i64 %10)
  %12 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %13 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %12, i32 0, i32 0
  %14 = load i32 (%struct.clock_event_device*)*, i32 (%struct.clock_event_device*)** %13, align 8
  %15 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %16 = call i32 %14(%struct.clock_event_device* %15)
  %17 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %17
}

declare dso_local i32 @writew(i32, i64) #1

declare dso_local i64 @IR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
